upload All spek tugas
