# controllers/filmController.js
@@ -106,7 +106,7 @@ class filmController {
             }
             const acceptHeader = req.get("Accept");
             if (acceptHeader && acceptHeader.includes("text/html")) {
-                res.redirect(`/film/${filmId}`);
+                res.redirect(`/films/${filmId}`);
             } else {
                 result[0] === 1 ? res.json({message: `Update Success`}) : res.json({message: `Update Failed`})
             }
