# routes/actorFilms.js
@@ -2,6 +2,6 @@ const { Router } = require('express');
 const actorFilmRoute = Router();
 const { actorFilmController } = require('../controllers');
 
-actorFilmRoute.get('/actor/:actorId', actorFilmController.getActorFilm);
+actorFilmRoute.get('/actors/:actorId', actorFilmController.getActorFilm);
 
 module.exports = actorFilmRoute;
