# routes/filmActors.js
@@ -2,6 +2,6 @@ const { Router } = require('express');
 const filmActorRoute = Router();
 const { filmActorController } = require('../controllers');
 
-filmActorRoute.get('/film/:filmId', filmActorController.getFilmActor);
+filmActorRoute.get('/films/:filmId', filmActorController.getFilmActor);
 
 module.exports = filmActorRoute;
